--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -294,7 +294,7 @@
   }
 
   .console-shell {
-    @apply mx-auto flex w-full max-w-6xl flex-1 flex-col gap-6 px-4 pb-8 pt-6 sm:px-6 lg:px-8;
+    @apply mx-auto flex w-full max-w-screen-2xl flex-1 flex-col gap-6 px-4 pb-8 pt-6 sm:px-6 lg:px-8 xl:px-12;
   }
 
   .console-panel {
